# CCRustStudy

./: CLAUDE.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  FINAL_COMPLETION.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LATEST_COMPLETION.md  LEARNING_GUIDE.md  LICENSE  OPTIMIZATION_REPORT.md  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_FULL.md  STATUS.md  TUTORIAL_STATUS.md  TUTORIAL_SUMMARY.md  rustfmt.toml  verify_project.sh
.github/workflows/: ci.yml
01-foundation/01-ownership-basics/: README.md  TUTORIAL.md
01-foundation/01-ownership-basics/src/: calculator.rs  history.rs  main.rs
01-foundation/02-structs-traits/: Cargo.toml  README.md  TUTORIAL.md
01-foundation/02-structs-traits/src/: main.rs  traits.rs
01-foundation/03-collections-iterators/: Cargo.toml  README.md  TUTORIAL.md
01-foundation/03-collections-iterators/src/: analyzer.rs  filters.rs  main.rs  stats.rs
01-foundation/04-error-handling/: Cargo.toml  README.md  TUTORIAL.md
01-foundation/04-error-handling/src/: csv.rs  errors.rs  main.rs  validator.rs
01-foundation/05-modules-cargo/: Cargo.toml  README.md  TUTORIAL.md
01-foundation/06-testing-docs/: Cargo.toml  README.md  TUTORIAL.md
02-intermediate/01-generics-lifetimes/: Cargo.toml  README.md  TUTORIAL.md
02-intermediate/02-smart-pointers/: README.md  TUTORIAL.md
02-intermediate/03-closures-functional/: Cargo.toml  README.md  TUTORIAL.md
02-intermediate/04-async-basics/: Cargo.toml  README.md  TUTORIAL.md
02-intermediate/05-serde/: Cargo.toml  README.md  TUTORIAL.md
03-advanced/01-macros/: Cargo.toml  README.md  TUTORIAL.md
03-advanced/02-unsafe-ffi/: Cargo.toml  README.md  TUTORIAL.md
03-advanced/03-concurrency/: Cargo.toml  README.md  TUTORIAL.md
03-advanced/04-performance/: Cargo.toml  README.md  TUTORIAL.md
04-graphics-foundation/01-math/: Cargo.toml  README.md  TUTORIAL.md
04-graphics-foundation/02-windowing/: Cargo.toml  README.md  TUTORIAL.md
04-graphics-foundation/03-wgpu-basics/: Cargo.toml  README.md  TUTORIAL.md
04-graphics-foundation/04-shaders/: Cargo.toml  README.md  TUTORIAL.md
04-graphics-foundation/05-rendering-pipeline/: Cargo.toml  README.md  TUTORIAL.md
05-web-services/01-axum-basics/: Cargo.toml  TUTORIAL.md
05-web-services/02-http-clients/: Cargo.toml  README.md  TUTORIAL.md
05-web-services/03-streaming/: Cargo.toml  README.md  TUTORIAL.md
05-web-services/04-database/: Cargo.toml  README.md  TUTORIAL.md
05-web-services/05-observability/: Cargo.toml  README.md  TUTORIAL.md
06-3d-renderer/: README.md
06-3d-renderer/01-architecture/: Cargo.toml  README.md  TUTORIAL.md
06-3d-renderer/02-resource-loading/: Cargo.toml  README.md  TUTORIAL.md
06-3d-renderer/03-camera-input/: Cargo.toml  README.md  TUTORIAL.md
06-3d-renderer/04-lighting-materials/: Cargo.toml  README.md  TUTORIAL.md
06-3d-renderer/05-advanced-features/: Cargo.toml  README.md  TUTORIAL.md
07-ai-gateway/: README.md
07-ai-gateway/01-architecture/: Cargo.toml  README.md  TUTORIAL.md
07-ai-gateway/02-ai-clients/: Cargo.toml  README.md  TUTORIAL.md
07-ai-gateway/02-ai-clients/src/: main.rs
07-ai-gateway/03-agent-core/: Cargo.toml  README.md  TUTORIAL.md
07-ai-gateway/04-tools-plugins/: Cargo.toml  README.md  TUTORIAL.md
07-ai-gateway/05-production/: Cargo.toml  README.md  TUTORIAL.md
07-ai-gateway/05-production/src/: main.rs
(+76 files in other folders)
